# AdvancedNLP-Project

./: .gitignore  README.md  llama3:8b_benchmark_results.csv  main.py  pyproject.toml
dpo_selector_model/: config.json
experiment_results/: Full_phase5_scaling_results.yaml
experiment_results/3_few_shot_results/: phase3_selector_experiment_cross_encoder.yaml
experiment_results/ner/: ner_task_results.yaml  ner_task_scaling_results.yaml
few_shot_results/: benchmark_dpo_k3.yaml  phase3_selector_experiment_lexical.yaml  phase3_selector_experiment_random.yaml  phase3_selector_experiment_semantic.yaml
fine_tunings/: evaluation_results.yaml
model-experiment-result/: benchmark_dpo_k3.yaml  benchmark_dpo_k3_full.yaml  benchmark_dpo_k3_full_V1.yaml  benchmark_semantic_k3.yaml  model_comparison_results.yaml  phase5_scaling_results.yaml
notebooks/: view_experiments.ipynb
reports/final_report/: custom.bib  main.tex
reports/project_roadmap/: custom.bib  main.tex
resources/: neurips_template.tex
results/ner/: ner_task_zeroshot_results.yaml
scripts/: pull_dataset.sh  pull_models.sh
src/: benchmark_models.py  benchmark_models_zs.py  compute_metrics.py  create_math_splits.py  dpo_dataset.py  shot_selector.py
src/DPO/: dpo_dataset.py  train_dpo_selector.py
src/baselines/: fine_tune.py
src/ner/: ner_task_baseline_nuner.py  ner_task_data_loader.py  ner_task_dpo_dataset.py  ner_task_metrics.py  ner_task_plot_results.py  ner_task_run_experiments.py  ner_task_run_scaling_only.py  ner_task_run_zeroshot.py  ner_task_train_dpo.py
src/phase2/: baseline_benchmark_results.csv  plot_baseline.py
src/phase3/: debug_phi3.py  run_model_comparison.py  run_phase3_experiment.py
src/phase4/: plot_full_comparison.py  plot_phase_4.py  run_model_comparison.py
src/phase5/: all_models_plot.py  line_chart.py  (+3 more)
(+29 files in other folders)
