[project]
name = "advancednlp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "transformers",
    "peft",
    "datasets",
    "torch",
    "torchvision",
    "trl",
    "unsloth[colab-new]",
    "numpy",
    "tqdm",
    "tensorboard>=2.20.0",
    "jupyter",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
