[project]
name = "advancednlp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "tensorboard>=2.20.0",
]
